# face-spoof-bz

./: .gitignore  README.md  deploy.conf.py  pyproject.toml  req.txt  requirements.txt
app/: __init__.py  config.py  routes.py
resources/: readme.md
services/: anti_spoof_service.py
